[package]
name = "bevy-networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy-voxel-engine = { git = "https://github.com/ria8651/bevy-voxel-engine" }
bevy_egui = "0.18.0"
bevy_renet = "0.0.6"
serde = { version = "1.0", features = [ "derive" ] }
bincode = "1.3.1"

[[bin]]
name = "client"
path = "src/client/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"