[package]
name = "bevy-networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_egui = "0.18"
egui_extras = "0.20"
matcher = { path = "matcher" }
# renet = "0.0.10"
bincode = "1.3.1"
env_logger = "0.9"
serde = { version = "1.0", features = [ "derive" ] }
log = { version = "0.4.11", features = [ "std" ] }
reqwest = { version = "0.11.11", features = [ "blocking", "json" ] }
# bevy-voxel-engine = { git = "https://github.com/ria8651/bevy-voxel-engine" }
bevy-voxel-engine = { path = "../bevy-voxel-engine" }
# bevy_egui = "0.18.0"
bevy_renet = "0.0.6"