[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy-voxel-engine = { git = "https://github.com/ria8651/bevy-voxel-engine" }
bevy_egui = "0.18.0"
bevy_quinnet = "0.2.0"
common = { path = "../common" }
